add_executable(test_bdd_node_cache test_bdd_node_cache.cpp)
target_link_libraries(test_bdd_node_cache LBDD)
add_test(test_bdd_node_cache test_bdd_node_cache)

add_executable(test_unique_table_page_cache test_unique_table_page_cache.cpp)
target_link_libraries(test_unique_table_page_cache LBDD)
add_test(test_unique_table_page_cache test_unique_table_page_cache)

add_executable(test_variable_addition test_variable_addition.cpp)
target_link_libraries(test_variable_addition bdd_mgr LBDD)
add_test(test_variable_addition test_variable_addition)

add_executable(test_bdd_projection test_bdd_projection.cpp)
target_link_libraries(test_bdd_projection LBDD)
add_test(test_bdd_projection test_bdd_projection)

add_executable(test_bdd_and_or test_bdd_and_or.cpp)
target_link_libraries(test_bdd_and_or LBDD)
add_test(test_bdd_and_or test_bdd_and_or)

add_executable(test_ite test_ite.cpp)
target_link_libraries(test_ite LBDD)
add_test(test_ite test_ite)

add_executable(test_mrf_chain test_mrf_chain.cpp)
target_link_libraries(test_mrf_chain LBDD)
add_test(test_mrf_chain test_mrf_chain)

add_executable(test_bdd_and_limited test_bdd_and_limited.cpp)
target_link_libraries(test_bdd_and_limited LBDD)
add_test(test_bdd_and_limited test_bdd_and_limited)

add_executable(test_utility_functions test_utility_functions.cpp)
target_link_libraries(test_utility_functions LBDD)
add_test(test_utility_functions test_utility_functions)

add_executable(test_nodes_postorder test_nodes_postorder.cpp)
target_link_libraries(test_nodes_postorder LBDD)
add_test(test_nodes_postorder test_nodes_postorder)

add_executable(test_nodes_bfs test_nodes_bfs.cpp)
target_link_libraries(test_nodes_bfs LBDD)
add_test(test_nodes_bfs test_nodes_bfs)

add_executable(test_bdd_collection test_bdd_collection.cpp)
target_link_libraries(test_bdd_collection LBDD)
add_test(test_bdd_collection test_bdd_collection)

add_executable(test_bdd_multi_and test_bdd_multi_and.cpp)
target_link_libraries(test_bdd_multi_and LBDD)
add_test(test_bdd_multi_and test_bdd_multi_and)

add_executable(test_bdd_exactly_one_solution test_bdd_exactly_one_solution.cpp)
target_link_libraries(test_bdd_exactly_one_solution LBDD)
add_test(test_bdd_exactly_one_solution test_bdd_exactly_one_solution)

add_executable(test_bdd_collection_and test_bdd_collection_and.cpp)
target_link_libraries(test_bdd_collection_and LBDD)
add_test(test_bdd_collection_and test_bdd_collection_and)

add_executable(test_bdd_collection_or_var test_bdd_collection_or_var.cpp)
target_link_libraries(test_bdd_collection_or_var LBDD)
add_test(test_bdd_collection_and test_bdd_collection_and)
